--- a/MastermindGame/MainWindow.xaml
+++ b/MastermindGame/MainWindow.xaml
@@ -1,16 +1,47 @@
 ﻿<Window x:Class="MastermindGame.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Mastermind" Height="350" Width="500">
-    <Grid>
+        Title="Mastermind" Height="350" Width="600">
+    <Grid Margin="0,0,0,-6">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="19*"/>
+            <ColumnDefinition Width="6*"/>
+        </Grid.ColumnDefinitions>
         <ComboBox Name="comboBox1" HorizontalAlignment="Left" VerticalAlignment="Top" Width="100" Height="30" Margin="10,10,0,0" SelectionChanged="ComboBox_SelectionChanged"/>
         <ComboBox Name="comboBox2" HorizontalAlignment="Left" VerticalAlignment="Top" Width="100" Height="30" Margin="120,10,0,0" SelectionChanged="ComboBox_SelectionChanged"/>
         <ComboBox Name="comboBox3" HorizontalAlignment="Left" VerticalAlignment="Top" Width="100" Height="30" Margin="230,10,0,0" SelectionChanged="ComboBox_SelectionChanged"/>
         <ComboBox Name="comboBox4" HorizontalAlignment="Left" VerticalAlignment="Top" Width="100" Height="30" Margin="340,10,0,0" SelectionChanged="ComboBox_SelectionChanged"/>
-        <Button Name="checkButton" Content="Check Code" HorizontalAlignment="Center" VerticalAlignment="Top" Width="326" Height="40" Margin="0,222,0,0" Click="CheckButton_Click" />
+        <Button Name="checkButton" Content="Check Code" HorizontalAlignment="Left" VerticalAlignment="Top" Width="326" Height="40" Margin="137,222,0,0" Click="CheckButton_Click" Grid.ColumnSpan="2" />
         <Label Name="feedBack1" HorizontalAlignment="Left" VerticalAlignment="Top" Width="100" Height="75" Margin="10,45,0,0" Background="White" BorderBrush="white" BorderThickness="4"/>
         <Label Name="feedBack2" HorizontalAlignment="Left" VerticalAlignment="Top" Width="100" Height="75" Margin="120,45,0,0" Background="White" BorderBrush="White" BorderThickness="4" />
         <Label Name="feedBack3" HorizontalAlignment="Left" VerticalAlignment="Top" Width="100" Height="75" Margin="230,45,0,0" Background="White" BorderBrush="White" BorderThickness="4"/>
         <Label Name="feedBack4" HorizontalAlignment="Left" VerticalAlignment="Top" Width="100" Height="75" Margin="340,45,0,0" Background="White" BorderBrush="White" BorderThickness="4"/>
+        <TextBox x:Name="debugTextBox" Visibility="Collapsed" 
+         IsReadOnly="True" 
+         HorizontalAlignment="Left" 
+         VerticalAlignment="Top" 
+         Margin="150,10,0,0" 
+         Width="300" 
+         Height="30" 
+         TextAlignment="Center"/>
+        <Label x:Name="timerLabel"
+       Content="Tijd: 0 seconden"
+       HorizontalAlignment="Right"
+       VerticalAlignment="Top"
+       Margin="0,10,10,0"
+       FontSize="14"
+       FontWeight="Bold" Grid.Column="1"/>
+        <Menu Margin="26,267,286,32">
+            <MenuItem Header="Bestand" Name="headerExplorer" >
+                <MenuItem Header="Nieuw Spel" Name="newGameBtn" Click="newGameBtn_Click"></MenuItem>
+                <MenuItem Header="High Score" Name="showHighScore" Click="showHighScore_Click"></MenuItem>
+                <MenuItem Header="Afsluiten" Name="closeAppMenuItem" Click="closeAppMenuItem_Click"></MenuItem>
+            </MenuItem>
+            <MenuItem Header="Instellingen" Width="72">
+                <MenuItem Header="Aantal pogingen" Name="countTry" Click="countTry_Click"></MenuItem>
+            </MenuItem>
+        </Menu>
+
     </Grid>
+    
 </Window>
